...
                Text(text = formattedDateTime, modifier = Modifier.weight(10f))
                Icon(
                    modifier = Modifier
                        .weight(1f)
                        .clickable { onClickEdit() },
                    imageVector = Icons.Default.Edit,
                    contentDescription = "edit_dream",
                )
            }
            Text(
                text = dream.title,
                maxLines = 2,
                fontWeight = FontWeight.Bold,
...
