...
        floatingActionButton = {
            FloatingActionButton(
                onClick = {
                    navController.navigate(Screen.AddEditNoteScreen.route)
                 }
            ) {
                Icon(imageVector = Icons.Default.Add, contentDescription = "add dream")
            }
        },
        topBar = {
            TopAppBar(
                title = { Text(text = "Dreams", fontWeight = FontWeight.Bold) },
                actions = {
...
