...
            FloatingActionButton(
                onClick = {
                    viewModel.onEvent(AddEditDreamEvent.SaveDream)
                    navController.navigate(Screen.DreamsScreen.route)
                }
            ) {
               Icon(imageVector = Icons.Default.Check, contentDescription = "save dream")
            }
        },
    ){ paddingValues ->

        Box(modifier = Modifier.padding(paddingValues)) {

...
